--- a/_notebooks/2020-09-24-Writing-Pytorch-DataLoaders.ipynb
+++ b/_notebooks/2020-09-24-Writing-Pytorch-DataLoaders.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Writing Pytorch DataLoaders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "I have often had times when I'd look at problems on kaggle and wonder how would I get this data into a model for training. I now know the answer to this but I was struggling to get it right for quite some time. This blog is for all those who are currently struggling with writing Pytorch Data Loaders.\n",
     "\n",
     "When it comes to training a Deep Learning model, the first step we need to get right is the writing a DataLoader. The most important thing to consider when writing a dataloader is the Data itself. \n",
