--- a/_notebooks/2020-09-24-Writing-Pytorch-DataLoaders.ipynb
+++ b/_notebooks/2020-09-24-Writing-Pytorch-DataLoaders.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Writing Pytorch DataLoaders"
+    "# Writing Pytorch DataLoaders\n",
+    "> A simple introduction to Pytorch DataLoaders\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [jupyter]"
    ]
   },
   {
